docs/i18n/pl/docusaurus-plugin-content-docs/version-1.6/shortcuts.md
---
title: "Skróty"
sidebar_position: 2
---


## Keyboard

Jest kilka skrótów, których możesz użyć w edytorze. Niektóre z nich są napisane pod przyciskami.

### Ogólny

* `Ctrl` + `N`: Nowy plik
* `Ctrl` + `Shift` + `N`: Nowy plik z szablonu
* `Ctrl` + `O`: Otwórz plik
* `Ctrl` + `I`: Importuj plik
* `Ctrl` + `E`: Eksportuj plik
* `Ctrl` + `Shift` + `E`: Eksportuj plik jako obraz
* `Ctrl` + `Alt` + `E`: Eksportuj plik jako svg
* `Ctrl` + `Alt` + `S`: Otwórz ustawienia

### Projekt

* `Ctrl` + `Z`: Cofnij
* `Ctrl` + `Y`: Ponów
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Otwórz ustawienia projektu
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Otwórz okno dialogowe palety kolorów
* `Ctrl` + `B`: Otwórz okno w tle
* `Ctrl` + `Shift` + `A`: Otwarte okno dialogowe
* `Ctrl` + `L`: Otwarte okno dialogowe
* `Ctrl` + `S`: Zapisz
* `Alt` + `S`: Zmień ścieżkę
* `Ctrl` + (`1` - `0`): Przełącz na malarz

## Stylus

* `Główny przycisk`: Zmień na narzędzie ręczne
* `Drugi przycisk`: Zmień na drugi malarz

## Skonfiguruj {#configure}

Dostosuj kontrole, nadając każdej kontroli indeks farby. Indeks farb zaczyna się od 1 i jest uporządkowany od lewej do prawej. Pusty indeks farby wyłączy przełącznik farby na tym urządzeniu. Wstaw `0` , aby włączyć poruszanie się z tą kontrolą.
